tests/baselines/reference/asyncGenerators.classMethod.9.es2017.errors.txt
tests/cases/conformance/asyncGenerators/es2017/classMethods/asyncGenerators.classMethod.9.es2017.ts(3,26): error TS1003: Identifier expected.
tests/cases/conformance/asyncGenerators/es2017/classMethods/asyncGenerators.classMethod.9.es2017.ts(3,34): error TS1005: '=>' expected.


==== tests/cases/conformance/asyncGenerators/es2017/classMethods/asyncGenerators.classMethod.9.es2017.ts (2 errors) ====
    class C {
        async * f() {
            async function * yield() {
                             ~~~~~
!!! error TS1003: Identifier expected.
                                     ~
!!! error TS1005: '=>' expected.
            }
        }
    }